Update for Winter'17  API v38.0

--- a/apex-mdapi/src/classes/MetadataServiceTest.cls
+++ b/apex-mdapi/src/classes/MetadataServiceTest.cls
@@ -927,9 +927,62 @@ private class MetadataServiceTest
         new MetaDataService.WaveLens();
         new MetaDataService.OrgPreferenceSettings();
         new MetaDataService.SearchSettings();
-        new MetadataService.GlobalPicklist();
         new MetadataService.GlobalPicklistValue();
         new MetadataService.PicklistValue();
+        new MetadataService.KeywordList();
+        new MetadataService.EmbeddedServiceLiveAgent();
+        new MetadataService.GlobalValueSet();
+        new MetadataService.OrganizationSettingsDetail();
+        new MetadataService.CleanRule();
+        new MetadataService.DuplicateRuleFilterItem();
+        new MetadataService.ContentAsset();
+        new MetadataService.EmbeddedServiceConfig();
+        new MetadataService.DuplicateRule();
+        new MetadataService.ValueSetValuesDefinition();
+        new MetadataService.ObjectSearchSetting();
+        new MetadataService.Keyword();
+        new MetadataService.OpportunityListFieldsLabelMapping();
+        new MetadataService.NavigationMenuItem();
+        new MetadataService.DuplicateRuleFilter();
+        new MetadataService.SearchSettingsByObject();
+        new MetadataService.CustomExperienceBranding();
+        new MetadataService.EventTypeParameter();
+        new MetadataService.DuplicateRuleMatchRule();
+        new MetadataService.FlowScreenRuleAction();
+        new MetadataService.KnowledgeCaseFieldsSettings();
+        new MetadataService.ObjectMappingField();
+        new MetadataService.ValueSet();
+        new MetadataService.ProfileActionOverride();
+        new MetadataService.ContentAssetRelationships();
+        new MetadataService.ContentAssetVersions();
+        new MetadataService.ExternalServiceRegistration();
+        new MetadataService.CustomExperience();
+        new MetadataService.KnowledgeCaseField();
+        new MetadataService.FieldMappingRow();
+        new MetadataService.EventParameterMap();
+        new MetadataService.ContentAssetVersion();
+        new MetadataService.AppBrand();
+        new MetadataService.ModeratedEntityField();
+        new MetadataService.ObjectMapping();
+        new MetadataService.TabLimitConfig();
+        new MetadataService.FieldMapping();
+        new MetadataService.CampaignInfluenceModel();
+        new MetadataService.ValueTranslation();
+        new MetadataService.StandardValueSet();
+        new MetadataService.FlowScreenRule();
+        new MetadataService.NavigationLinkSet();
+        new MetadataService.StandardValueSetTranslation();
+        new MetadataService.OpportunityListFieldsUnselectedSettings();
+        new MetadataService.GlobalValueSetTranslation();
+        new MetadataService.StandardValue();
+        new MetadataService.ContentAssetLink();
+        new MetadataService.ApexTestSuite();
+        new MetadataService.QuickActionSendEmailOptions();
+        new MetadataService.CleanDataService();
+        new MetadataService.ValueSettings();
+        new MetadataService.FieldMappingField();
+        new MetadataService.CustomExperienceTabSet();
+        new MetadataService.KnowledgeSuggestedArticlesSettings();
     }
 
     @IsTest
@@ -1080,6 +1133,19 @@ private class MetadataServiceTest
         new MetadataService.ReadModerationRuleResult().getRecords();
         new MetadataService.ReadWaveApplicationResult().getRecords();
         new MetadataService.ReadWaveDatasetResult().getRecords();
+        new MetadataService.ReadChannelLayoutResult().getRecords();
+        new MetadataService.ReadContentAssetResult().getRecords();
+        new MetadataService.ReadApexTestSuiteResult().getRecords();
+        new MetadataService.ReadCustomValueResult().getRecords();
+        new MetadataService.ReadStandardValueResult().getRecords();
+        new MetadataService.ReadStandardValueSetResult().getRecords();
+        new MetadataService.ReadGlobalPicklistValueResult().getRecords();
+        new MetadataService.ReadGlobalValueSetResult().getRecords();
+        new MetadataService.ReadSearchSettingsResult().getRecords();
+        new MetadataService.ReadOrgPreferenceSettingsResult().getRecords();
+        new MetadataService.ReadWaveLensResult().getRecords();
+        new MetadataService.ReadWaveDataflowResult().getRecords();
+        new MetadataService.ReadWaveDashboardResult().getRecords();
     }
 
     @IsTest
@@ -1234,8 +1300,15 @@ private class MetadataServiceTest
         new MetaDataService.readWaveLensResponse_element().getResult();
         new MetaDataService.readOrgPreferenceSettingsResponse_element().getResult();
         new MetaDataService.readSearchSettingsResponse_element().getResult();
-        new MetadataService.readGlobalPicklistResponse_element().getResult();
         new MetadataService.readGlobalPicklistValueResponse_element().getResult();
         new MetadataService.readPicklistValueResponse_element().getResult();     
+        new MetadataService.readContentAssetResponse_element().getResult();
+        new MetadataService.readChannelLayoutResponse_element().getResult();
+        new MetadataService.readApexTestSuiteResponse_element().getResult();
+        new MetadataService.readCustomValueResponse_element().getResult();
+        new MetadataService.readStandardValueResponse_element().getResult();
+        new MetadataService.readStandardValueSetResponse_element().getResult();
+        new MetadataService.readGlobalValueSetResponse_element().getResult();
+        new MetadataService.readWaveDashboardResponse_element().getResult();
     }    
 }
