--- a/apex-mdapi/src/classes/MetadataServicePatcher.cls
+++ b/apex-mdapi/src/classes/MetadataServicePatcher.cls
@@ -61,7 +61,7 @@ This patch script performs the following changes to the default WSDL2Apex tool o
  **/
 public with sharing class MetadataServicePatcher {
 
-	private static final String API_VERSION = '37.0';
+	private static final String API_VERSION = '38.0';
 	
 	// List of classes to modify so that they extend appropirte base class (parse WSDL in future?)
 	private static final Map<String, String> METADATA_TYPES = 
@@ -260,9 +260,15 @@ public with sharing class MetadataServicePatcher {
 			'WaveLens' => 'MetadataWithContent',
 			'OrgPreferenceSettings' => 'Metadata',
 			'SearchSettings' => 'Metadata',
-			'GlobalPicklist' => 'Metadata',
+			'GlobalValueSet' => 'Metadata',
 			'GlobalPicklistValue' => 'Metadata',
-			'PicklistValue' => 'GlobalPicklistValue'
+			'PicklistValue' => 'GlobalPicklistValue',
+			'StandardValueSet' => 'Metadata',
+			'StandardValue' => 'CustomValue',
+			'CustomValue' => 'Metadata',
+			'ApexTestSuite' => 'Metadata',
+			'ChannelLayout' => 'Metadata',
+			'ContentAsset' => 'Metadata'
 			}; // TODO: Inheritance modifications for Role and Custom Shortcut
 
 	// List of base types to prescan for merging into derived types
