--- a/apex-mdapi/src/classes/MetadataServicePatcher.cls
+++ b/apex-mdapi/src/classes/MetadataServicePatcher.cls
@@ -61,7 +61,7 @@ This patch script performs the following changes to the default WSDL2Apex tool o
  **/
 public with sharing class MetadataServicePatcher {
 
-	private static final String API_VERSION = '38.0';
+	private static final String API_VERSION = '42.0';
 	
 	// List of classes to modify so that they extend appropirte base class (parse WSDL in future?)
 	private static final Map<String, String> METADATA_TYPES = 
@@ -268,7 +268,25 @@ public with sharing class MetadataServicePatcher {
 			'CustomValue' => 'Metadata',
 			'ApexTestSuite' => 'Metadata',
 			'ChannelLayout' => 'Metadata',
-			'ContentAsset' => 'Metadata'
+			'ContentAsset' => 'Metadata',
+            'EmailServicesFunction' => 'Metadata',
+            'EmbeddedServiceBranding' => 'Metadata',
+            'EmbeddedServiceConfig' => 'Metadata',
+            'EmbeddedServiceLiveAgent' => 'Metadata',
+            'CaseSubjectParticle' => 'Metadata',
+            'NetworkBranding' => 'MetadataWithContent',
+            'SocialCustomerServiceSettings' => 'Metadata',
+            'TopicsForObjects' => 'Metadata',
+            'BrandingSet' => 'Metadata',
+            'ProfilePasswordPolicy' => 'Metadata',
+            'ProfileSessionSetting' => 'Metadata',
+            'CspTrustedSite' => 'Metadata',
+            'EclairGeoData' => 'MetadataWithContent',
+            'ExternalServiceRegistration' => 'Metadata',
+            'FileUploadAndDownloadSecuritySettings' => 'Metadata',
+            'LeadConvertSettings' => 'Metadata',
+            'UserCriteria' => 'Metadata',
+            'Wavexmd' => 'Metadata'
 			}; // TODO: Inheritance modifications for Role and Custom Shortcut
 
 	// List of base types to prescan for merging into derived types
