Needs to update CustomValue class with new fields
It was giving error while updating the picklist value.
The error was: Web service callout failed: Unable to find apex schema info
Adding these fields to resolving the issue.

https://github.com/financialforcedev/apex-mdapi/issues/225

--- a/apex-mdapi/src/classes/MetadataService.cls
+++ b/apex-mdapi/src/classes/MetadataService.cls
@@ -1737,11 +1737,23 @@ public class MetadataService {
         private String[] field_order_type_info = new String[]{'field'};
     }
     public virtual class CustomValue extends Metadata {
+            
+	public String type = 'CustomValue';
+        public String fullName;
+        private String[] fullName_type_info = new String[]{'fullName',SOAP_M_URI,null,'0','1','false'};
         public String color;
         public Boolean default_x;
         public String description;
         public Boolean isActive;
         public String label;
+        private String[] color_type_info = new String[]{'color',SOAP_M_URI,null,'0','1','false'};
+        private String[] default_x_type_info = new String[]{'default',SOAP_M_URI,null,'1','1','false'};
+        private String[] description_type_info = new String[]{'description',SOAP_M_URI,null,'0','1','false'};
+        private String[] isActive_type_info = new String[]{'isActive',SOAP_M_URI,null,'0','1','false'};
+        private String[] label_type_info = new String[]{'label',SOAP_M_URI,null,'0','1','false'};
+        private String[] apex_schema_type_info = new String[]{SOAP_M_URI,'true','false'};
+        private String[] field_order_type_info = new String[]{'fullName','color','default_x','description','isActive','label'};
+
     }
     public class ListView extends Metadata {
         public String type = 'ListView';
