--- a/sfdx-mdapi/force-app/main/default/classes/tests/stubs/MetadataPortStub.cls
+++ b/sfdx-mdapi/force-app/main/default/classes/tests/stubs/MetadataPortStub.cls
@@ -3,6 +3,8 @@ public class MetadataPortStub implements StubProvider {
 
 	private MetadataService.DescribeMetadataResult describeResult;
 	private MetadataService.FileProperties[] listMetadata;
+	private MetadataService.AsyncResult asyncResult;
+	private MetadataService.DeployResult deployStatus;
 
 	public static MetadataPortStub newInstance() {
 		MetadataPortStub stub = new MetadataPortStub();
@@ -15,6 +17,10 @@ public class MetadataPortStub implements StubProvider {
 			return this.describeResult;
 		if (stubbedMethodName == 'listMetadata')
 			return this.listMetadata;
+		if (stubbedMethodName == 'deploy')
+			return this.asyncResult;
+		if (stubbedMethodName == 'checkDeployStatus')
+			return this.deployStatus;
 		return null;
 	}
 
@@ -25,6 +31,16 @@ public class MetadataPortStub implements StubProvider {
 
 	public MetadataPortStub withResultListMetadata(MetadataService.FileProperties[] listMetadata) {
 		this.listMetadata = listMetadata;
+		return this;
+	}
+
+	public MetadataPortStub withResultDeploy(MetadataService.AsyncResult asyncResult) {
+		this.asyncResult = asyncResult;
+		return this;
+	}
+
+	public MetadataPortStub withResultCheckDeployStatus(MetadataService.DeployResult deployStatus) {
+		this.deployStatus = deployStatus;
 		return this;
 	}
 }
